--- a/bamboo-install-agent.yml
+++ b/bamboo-install-agent.yml
@@ -50,12 +50,18 @@
         owner: bamboo
         group: bamboo
 
-    - name: create agent directory
+    - name: create agent home directory
       file:
-        path: "{{ agent_home }}"
+        path: /mnt/storage/bamboo-agent-home
         owner: bamboo
         group: bamboo
         state: directory
+
+    - name: symlink agent home directory
+      file:
+        src: /mnt/storage/bamboo-agent-home
+        dest: "{{ agent_home }}"
+        state: link
 
     - name: install agent
       become_user: bamboo
