--- a/bamboo-update.yml
+++ b/bamboo-update.yml
@@ -1,12 +1,12 @@
 - hosts: bamboo-agents
   remote_user: ubuntu
+  gather_facts: false
   become: true
 
   tasks:
     - name: update and upgrade apt packages
       apt:
         update_cache: yes
-        cache_valid_time: 86400 # One day
         upgrade: dist
         autoclean: yes
         autoremove: yes
